--- a/themes/hugo_robust/layouts/partials/sidebar.html
+++ b/themes/hugo_robust/layouts/partials/sidebar.html
@@ -50,7 +50,7 @@
 
         <div class="fb-follow" data-href="https://www.facebook.com/Traveling-Bubbles-263380677505386/" data-width="310" data-layout="standard" data-size="large" data-show-faces="true"></div>
         <div>
-          <a href="//www.instagram.com/traveling_bubbles?ref=badge" class="ig-b- ig-b-32" target="_blank"><img src="//badges.instagram.com/static/images/ig-badge-32.png" alt="Instagram" /></a>
+          <a href="//www.instagram.com/traveling_bubbles?ref=badge" class="ig-b- ig-b-32" target="_blank"></a>
         </div>
       </div>
     </section>
