--- a/themes/hugo_robust/layouts/partials/styles.css
+++ b/themes/hugo_robust/layouts/partials/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
   color: #333;
-  {{- with .Site.Params.fontfamily -}} font-family: {{ . | safeCSS }},'Roboto Slab','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro',メイリオ,Meiryo,sans-serif; {{ end }}
+  {{- with .Site.Params.fontfamily -}} font-family: {{ . | safeCSS }},'Roboto Slab','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro',Meiryo,sans-serif; {{ end }}
   font-feature-settings : "palt";
   font-size: inherit;
   line-height: 1rem;
